--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Conf Bs As</title>
 </head>
+
 <body>
-    <h1>Conf Bs As</h1>
+    <div class="row">
+        <div class="col"><img src="cac-integrador-front-2022c1\img\codoacodo.png" alt="Ícono de Codo a Codo"></div>
+        <div class="col"><h1>Conf Bs As</h1></div>
+        <div class="col">La conferencia</div>
+        <div class="col">Los oradores</div>
+        <div class="col">El lugar y fecha</div>
+        <div class="col">Se un orador</div>
+        <div class="col">Comprar tickets</div>
+    </div>
 </body>
+
 </html>
