--- a/index.html
+++ b/index.html
@@ -6,109 +6,153 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Conf Bs As</title>
 </head>
 
 <body>
-    <div class="row container-fluid bg-dark">
-        <div class="col align-middle pt-2"><img width="70%" src="img\codoacodo.png" alt="Ícono de Codo a Codo"></div>
-        <div class="col align-middle pt-2 text-light">
-            <h4>Conf Bs As</h4>
-        </div>
-        <a class="col align-middle pt-2 text-light text-center text-decoration-none">La conferencia</a>
-        <a class="col align-middle pt-2 text-secondary text-center text-decoration-none">Los oradores</a>
-        <a class="col align-middle pt-2 text-secondary text-center text-decoration-none">El lugar y fecha</a>
-        <a class="col align-middle pt-2 text-secondary text-centera text-decoration-none">Se un orador</a>
-        <a class="col align-middle pt-2 text-success text-center text-decoration-none">Comprar tickets</a>
-    </div>
-    <div class="col container-fluid"><img src="img\ba1.jpg" alt="Imagen de Bs As">
-        <h2 class="text-light">Conf Bs As</h2>
-        <p class="text-light">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
-            conocimiento y experiencia de los expertos que están creando el futuro del Internet. Ven a conocer a
-            miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti.
-            ¡Te esperamos!</p>
-        <a href="#form" class="text-light">Quiero ser un orador</a>
-        <button class="btn btn-success">Comprar tickets</button>
-    </div>
-    <div class="row container-sm text-center">
-        <h6>CONOCE A LOS</h6>
-        <h2>ORADORES</h2>
-        <div class="col-sm card">
-            <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
-            <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
-            <div class="card-body">
-                <h5 class="card-title">Steves Jobs</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
-                    cupiditate
-                    voluptate,
-                    obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat dolores quod
-                    at
-                    laudantium nemo omnis
-                    expedita alias velit eveniet.</p>
+    <div class="container-fluid">
+        <nav class="row navbar navbar-expand-sm bg-dark">
+            <div class="container-fluid">
+                <ul class="col navbar-nav">
+                    <li class="nav-item"><img width="30%" src="img\codoacodo.png" alt="Ícono de Codo a codo"></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="#">Conf Bs As</a></li>
+                </ul>
+                <ul class="col navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">La conferencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Los oradores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">El lugar y fecha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Se un orador</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="#">Comprar tickets</a>
+                    </li>
+                </ul>
             </div>
-        </div>
-        <div class="col-sm card">
-            <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
-            <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
-            <div class="card-body">
-                <h5 class="card-title">Bill Gates</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti, odit
-                    harum
-                    commodi ab nostrum
-                    incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
-                    blanditiis
-                    inventore?</p>
-            </div>
-        </div>
-        <div class="col-sm card">
-            <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
-            <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
-            <div class="card-body">
-                <h5 class="card-title">Ada Lovelace</h5>
-                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea rem, quo
-                    laborum fugit fugiat
-                    blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa ducimus
-                    possimus?</p>
-            </div>
-        </div>
+
     </div>
-    <div class="row container-fluid clearfix">
-        <div class="col-sm m-0"><img width="100%" class="float-start" src="img\honolulu.jpg"
-                alt="Foto de playa de Honolulu"></div>
-        <div class="col-sm m-0 bg-dark float-end">
-            <h2 class="text-light">Bs As - Octubre</h2>
-            <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina en Estados
-                Unidos. Honolulu
-                es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se refiere
-                al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han formadouna
-                ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
-            <div class="text-light">Conocé más</div>
-        </div>
-    </div>
-    <div class="row container-sm text-center">
-        <h6 id="form">CONVIÉRTETE EN UN</h6>
-        <h2>ORADOR</h2>
-        <p>Anótate como orador para dar una <span>charla ignite</span>. Cuéntanos de que quieres hablar!</p>
-        <form class="d-grisdan" action="mailtobsas@gmail.com.ar">
-            <input type="text" name="Nombre" placeholder="Nombre"> <input type="text" name="Apellido"
-                placeholder="Apellido"><br>
-            <textarea class="mt-1" name="tema" id="tema" cols="50" rows="10"
-                placeholder="Sobre qué quieres hablar?"></textarea><br>
-            <p class="small">Recuerda incluir un título para tu charla.</p>
-            <input type="submit" value="Enviar" class="btn btn-success btn-block">
-        </form>
     </div>
     <div class="container-fluid">
-        <div class="row text-center text-light bg-primary">
-            <div class="col p-3 pt-2eguntas frecuentes</div>
-            <div class="col p-3 pt-2ntáctanos</div>
-            <div class="col p-3 pt-2ensa</div>
-            <div class="col p-3 pt-2nferencias</div>
-            <div class="col p-3 pt-2rminos y condiciones</div>
-            <div class="col p-3 pt-2ivacidad</div>
-            <div class="col p-3 pt-2tudiantes</div>
+        <div class="row">
+            <div class="col">
+                <img src="img\ba1.jpg" alt="Imagen de Bs As">
+                <h2 class="text-light">Conf Bs As</h2>
+                <p class="text-light">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra
+                    comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet.
+                    Ven a conocer a
+                    miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos
+                    para
+                    ti.
+                    ¡Te esperamos!</p>
+                <a href="#form" class="text-light">Quiero ser un orador</a>
+                <button class="btn btn-success">Comprar tickets</button>
+            </div>
         </div>
     </div>
+    <div class="container-sm">
+        <div class="row text-center">
+            <h6>CONOCE A LOS</h6>
+            <h2>ORADORES</h2>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
+                <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
+                <div class="card-body">
+                    <h5 class="card-title">Steves Jobs</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
+                        cupiditate
+                        voluptate,
+                        obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat dolores
+                        quod
+                        at
+                        laudantium nemo omnis
+                        expedita alias velit eveniet.</p>
+                </div>
+            </div>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
+                <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
+                <div class="card-body">
+                    <h5 class="card-title">Bill Gates</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti, odit
+                        harum
+                        commodi ab nostrum
+                        incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
+                        blanditiis
+                        inventore?</p>
+                </div>
+            </div>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
+                <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
+                <div class="card-body">
+                    <h5 class="card-title">Ada Lovelace</h5>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea rem,
+                        quo
+                        laborum fugit fugiat
+                        blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa
+                        ducimus
+                        possimus?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row clearfix">
+            <div class="col-sm m-0"><img width="100%" class="float-start" src="img\honolulu.jpg"
+                    alt="Foto de playa de Honolulu"></div>
+            <div class="col-sm m-0 bg-dark float-end">
+                <h2 class="text-light">Bs As - Octubre</h2>
+                <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina en
+                    Estados
+                    Unidos. Honolulu
+                    es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
+                    refiere
+                    al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
+                    formadouna
+                    ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
+                <div class="text-light">Conocé más</div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row text-center">
+            <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
+            <h2>ORADOR</h2>
+            <p>Anótate como orador para dar una <span>charla ignite</span>. Cuéntanos de que quieres hablar!</p>
+            <form class="d-grisdan" action="mailtobsas@gmail.com.ar">
+                <input type="text" name="Nombre" placeholder="Nombre"> <input type="text" name="Apellido"
+                    placeholder="Apellido"><br>
+                <textarea class="mt-1" name="tema" id="tema" cols="50" rows="10"
+                    placeholder="Sobre qué quieres hablar?"></textarea><br>
+                <p class="small">Recuerda incluir un título para tu charla.</p>
+                <input type="submit" value="Enviar" class="btn btn-success btn-block">
+            </form>
+        </div>
+    </div>
+
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-sm bg-primary">
+                <div class="container-fluid">
+                    <div class="text-center mx-auto">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
 </body>
 
 </html>
