--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos\estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     <title>Conf Bs As</title>
 </head>
 
@@ -15,7 +17,7 @@
         <nav class="row navbar navbar-expand-sm bg-dark">
             <div class="container-fluid">
                 <ul class="col navbar-nav">
-                    <li class="nav-item"><img width="30%" src="img\codoacodo.png" alt="Ícono de Codo a codo"></li>
+                    <li class="nav-item"><img class="navbar-brand" width="30%" src="img\codoacodo.png" alt="Ícono de Codo a codo"></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#">Conf Bs As</a></li>
                 </ul>
                 <ul class="col navbar-nav">
@@ -38,22 +40,24 @@
             </div>
 
     </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <img src="img\ba1.jpg" alt="Imagen de Bs As">
-                <h2 class="text-light">Conf Bs As</h2>
-                <p class="text-light">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra
-                    comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet.
-                    Ven a conocer a
-                    miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos
-                    para
-                    ti.
-                    ¡Te esperamos!</p>
-                <a href="#form" class="text-light">Quiero ser un orador</a>
-                <button class="btn btn-success">Comprar tickets</button>
-            </div>
+    <div class="container-fluid container1">
+        <img class="img-responsive" src="img\ba1.jpg" alt="Imagen de Bs As" style="width:100%;">
+        <div class="bottom-right">
+            <h2 class="text-light">Conf Bs As</h2>
+            <p class="text-light">Bs As llega por primera vez a Argentina. Un evento para compartir
+                con nuestra
+                comunidad el conocimiento y experiencia de los expertos que están creando el futuro del
+                Internet.
+                Ven a conocer a
+                miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que
+                tenemos
+                para
+                ti.
+                ¡Te esperamos!</p>
+            <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
+                    orador</a></button>
+            <button class="btn btn-success"><a class="text-light text-decoration-none" href="#">Comprar
+                    tickets</a></button>
         </div>
     </div>
     <div class="container-sm">
@@ -137,22 +141,23 @@
         </div>
     </div>
 
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-sm bg-primary">
-                <div class="container-fluid">
-                    <div class="text-center mx-auto">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
-                        </ul>
-                    </div>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm bg-primary">
+            <div class="container-fluid">
+                <div class="text-center mx-auto">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
+                    </ul>
                 </div>
-        </div>
+            </div>
+    </div>
 </body>
 
 </html>
