Texto con fondito transparente en imagen no responsive

--- a/index.html
+++ b/index.html
@@ -41,18 +41,10 @@
 
     </div>
     <div class="container-fluid container1">
-        <img class="img-responsive" src="img\ba1.jpg" alt="Imagen de Bs As" style="width:100%;">
-        <div class="bottom-right">
+        <img class="img-fluid" src="img\ba1.jpg" alt="Imagen de Bs As" style="width:100%;">
+        <div id="texto-en-imagen" class="bottom-right">
             <h2 class="text-light">Conf Bs As</h2>
-            <p class="text-light">Bs As llega por primera vez a Argentina. Un evento para compartir
-                con nuestra
-                comunidad el conocimiento y experiencia de los expertos que están creando el futuro del
-                Internet.
-                Ven a conocer a
-                miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que
-                tenemos
-                para
-                ti.
+            <p class="text-light">Bs As llega por primera vez a Argentina. <br>Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet.<br> Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti.<br>
                 ¡Te esperamos!</p>
             <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
                     orador</a></button>
@@ -66,7 +58,7 @@
             <h2>ORADORES</h2>
             <div class="col-sm card">
                 <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
-                <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
+                <span class="badge bg-warning text-body">JavaScript</span><span class="badge bg-primary">React</span>
                 <div class="card-body">
                     <h5 class="card-title">Steves Jobs</h5>
                     <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
