--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="estilos\estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    
     <title>Conf Bs As</title>
 </head>
-
 <body>
+    <!--Navbar-->
     <div class="container-fluid">
         <nav class="row navbar navbar-expand-sm bg-dark">
             <div class="container-fluid">
@@ -40,18 +39,24 @@
             </div>
 
     </div>
-    <div class="container-fluid container1">
-        <img class="img-fluid" src="img\ba1.jpg" alt="Imagen de Bs As" style="width:100%;">
-        <div id="texto-en-imagen" class="bottom-right">
-            <h2 class="text-light">Conf Bs As</h2>
-            <p class="text-light">Bs As llega por primera vez a Argentina. <br>Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet.<br> Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti.<br>
-                ¡Te esperamos!</p>
-            <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
-                    orador</a></button>
-            <button class="btn btn-success"><a class="text-light text-decoration-none" href="#">Comprar
-                    tickets</a></button>
+    <!--Imagen con texto adentro-->
+    <div class="container-fluid">
+        <div style="height:75vh;" class="fondoimagen ">
+            <div style="height:75vh;" class="opacity">
+                <div class="container-fluid row">
+                    <div class="col-sm-6"></div>
+                    <div class="container text-end col-sm-6 align-middle text-light">
+                        <h1>Conf Bs As</h1>
+                        <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. ¡Te esperamos!</p>
+                        <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
+                                orador</a></button>
+                        <button class="btn btn-success"><a class="text-light text-decoration-none" href="#">Comprar
+                                tickets</a></button>
+                </div>
+            </div>
         </div>
     </div>
+    <!--Cards-->
     <div class="container-sm">
         <div class="row text-center">
             <h6>CONOCE A LOS</h6>
@@ -99,10 +104,12 @@
             </div>
         </div>
     </div>
+    <!--Imágen con texto al costado-->
     <div class="container-fluid">
         <div class="row clearfix">
-            <div class="col-sm m-0"><img width="100%" class="float-start" src="img\honolulu.jpg"
-                    alt="Foto de playa de Honolulu"></div>
+            <div class="col-sm m-0">
+                <img width="100%" class="float-start" src="img\honolulu.jpg" alt="Foto de playa de Honolulu">
+            </div>
             <div class="col-sm m-0 bg-dark float-end">
                 <h2 class="text-light">Bs As - Octubre</h2>
                 <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina en
@@ -117,22 +124,23 @@
             </div>
         </div>
     </div>
+    <!--Formulario-->
     <div class="container-fluid">
         <div class="row text-center">
             <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
             <h2>ORADOR</h2>
-            <p>Anótate como orador para dar una <span>charla ignite</span>. Cuéntanos de que quieres hablar!</p>
+            <p>Anótate como orador para dar una <span class="charlaignite">charla ignite</span>. Cuéntanos de que quieres hablar!</p>
             <form class="d-grisdan" action="mailtobsas@gmail.com.ar">
                 <input type="text" name="Nombre" placeholder="Nombre"> <input type="text" name="Apellido"
                     placeholder="Apellido"><br>
-                <textarea class="mt-1" name="tema" id="tema" cols="50" rows="10"
+                <textarea class="mt-1" name="tema" id="tema" cols="30" rows="10"
                     placeholder="Sobre qué quieres hablar?"></textarea><br>
                 <p class="small">Recuerda incluir un título para tu charla.</p>
                 <input type="submit" value="Enviar" class="btn btn-success btn-block">
             </form>
         </div>
     </div>
-
+    <!--Navbar de abajo-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm bg-primary">
             <div class="container-fluid">
