Intento de Boostrap en formulario

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Conf Bs As</title>
 </head>
+
 <body>
     <!--Navbar-->
     <div class="container-fluid">
         <nav class="row navbar navbar-expand-sm bg-dark">
             <div class="container-fluid">
                 <ul class="col navbar-nav">
-                    <li class="nav-item"><img class="navbar-brand" width="30%" src="img\codoacodo.png" alt="Ícono de Codo a codo"></li>
+                    <li class="nav-item"><img class="navbar-brand" width="30%" src="img\codoacodo.png"
+                            alt="Ícono de Codo a codo"></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#">Conf Bs As</a></li>
                 </ul>
                 <ul class="col navbar-nav">
@@ -47,117 +49,132 @@
                     <div class="col-sm-6"></div>
                     <div class="container text-end col-sm-6 align-middle text-light">
                         <h1>Conf Bs As</h1>
-                        <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro del Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. ¡Te esperamos!</p>
+                        <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
+                            conocimiento y experiencia de los expertos que están creando el futuro del Internet. Ven a
+                            conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer
+                            nivel que tenemos para ti. ¡Te esperamos!</p>
                         <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
                                 orador</a></button>
                         <button class="btn btn-success"><a class="text-light text-decoration-none" href="#">Comprar
                                 tickets</a></button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--Cards-->
-    <div class="container-sm">
-        <div class="row text-center">
-            <h6>CONOCE A LOS</h6>
-            <h2>ORADORES</h2>
-            <div class="col-sm card">
-                <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
-                <span class="badge bg-warning text-body">JavaScript</span><span class="badge bg-primary">React</span>
-                <div class="card-body">
-                    <h5 class="card-title">Steves Jobs</h5>
-                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
-                        cupiditate
-                        voluptate,
-                        obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat dolores
-                        quod
-                        at
-                        laudantium nemo omnis
-                        expedita alias velit eveniet.</p>
+        <!--Cards-->
+        <div class="container-sm">
+            <div class="row text-center">
+                <h6>CONOCE A LOS</h6>
+                <h2>ORADORES</h2>
+                <div class="col-sm card">
+                    <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
+                    <span class="badge bg-warning text-body">JavaScript</span><span
+                        class="badge bg-primary">React</span>
+                    <div class="card-body">
+                        <h5 class="card-title">Steves Jobs</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
+                            cupiditate
+                            voluptate,
+                            obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat
+                            dolores
+                            quod
+                            at
+                            laudantium nemo omnis
+                            expedita alias velit eveniet.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm card">
-                <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
-                <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
-                <div class="card-body">
-                    <h5 class="card-title">Bill Gates</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti, odit
-                        harum
-                        commodi ab nostrum
-                        incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
-                        blanditiis
-                        inventore?</p>
+                <div class="col-sm card">
+                    <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
+                    <span class="badge bg-warning text-body">JavaScript</span> <span
+                        class="badge bg-primary">React</span>
+                    <div class="card-body">
+                        <h5 class="card-title">Bill Gates</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti,
+                            odit
+                            harum
+                            commodi ab nostrum
+                            incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
+                            blanditiis
+                            inventore?</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm card">
-                <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
-                <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
-                <div class="card-body">
-                    <h5 class="card-title">Ada Lovelace</h5>
-                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea rem,
-                        quo
-                        laborum fugit fugiat
-                        blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa
-                        ducimus
-                        possimus?</p>
+                <div class="col-sm card">
+                    <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
+                    <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
+                    <div class="card-body">
+                        <h5 class="card-title">Ada Lovelace</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea
+                            rem,
+                            quo
+                            laborum fugit fugiat
+                            blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa
+                            ducimus
+                            possimus?</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--Imágen con texto al costado-->
-    <div class="container-fluid">
-        <div class="row clearfix">
-            <div class="col-sm m-0">
-                <img width="100%" class="float-start" src="img\honolulu.jpg" alt="Foto de playa de Honolulu">
-            </div>
-            <div class="col-sm m-0 bg-dark float-end">
-                <h2 class="text-light">Bs As - Octubre</h2>
-                <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina en
-                    Estados
-                    Unidos. Honolulu
-                    es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
-                    refiere
-                    al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
-                    formadouna
-                    ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
-                <div class="text-light">Conocé más</div>
-            </div>
-        </div>
-    </div>
-    <!--Formulario-->
-    <div class="container-fluid">
-        <div class="row text-center">
-            <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
-            <h2>ORADOR</h2>
-            <p>Anótate como orador para dar una <span class="charlaignite">charla ignite</span>. Cuéntanos de que quieres hablar!</p>
-            <form class="d-grisdan" action="mailtobsas@gmail.com.ar">
-                <input type="text" name="Nombre" placeholder="Nombre"> <input type="text" name="Apellido"
-                    placeholder="Apellido"><br>
-                <textarea class="mt-1" name="tema" id="tema" cols="30" rows="10"
-                    placeholder="Sobre qué quieres hablar?"></textarea><br>
-                <p class="small">Recuerda incluir un título para tu charla.</p>
-                <input type="submit" value="Enviar" class="btn btn-success btn-block">
-            </form>
-        </div>
-    </div>
-    <!--Navbar de abajo-->
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-sm bg-primary">
-            <div class="container-fluid">
-                <div class="text-center mx-auto">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a></li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
-                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
-                    </ul>
+        <!--Imágen con texto al costado-->
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-sm m-0">
+                    <img width="100%" class="float-start" src="img\honolulu.jpg" alt="Foto de playa de Honolulu">
+                </div>
+                <div class="col-sm m-0 bg-dark float-end">
+                    <h2 class="text-light">Bs As - Octubre</h2>
+                    <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina en
+                        Estados
+                        Unidos. Honolulu
+                        es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
+                        refiere
+                        al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
+                        formadouna
+                        ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
+                    <div class="text-light">Conocé más</div>
                 </div>
             </div>
-    </div>
+        </div>
+        <!--Formulario-->
+        <div class="container-fluid">
+            <div class="row text-center">
+                <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
+                <h2>ORADOR</h2>
+                <p>Anótate como orador para dar una <span class="charlaignite">charla ignite</span>. Cuéntanos de que
+                    quieres hablar!</p>
+                </div>
+                <form class="d-grisdan" action="mailtobsas@gmail.com.ar">
+                    <div class="row container-fluid">
+                        <div class="col"><input class="form-control" type="text" name="Nombre" placeholder="Nombre">
+                        </div>
+                        <div class="col">
+                            <input class="form-control" type="text" name="Apellido" placeholder="Apellido"></div>
+                    </div>
+                    <textarea class="row form-control" class="mt-1" name="tema" id="tema" cols="30" rows="10"
+                        placeholder="Sobre qué quieres hablar?"></textarea><br>
+                    <p class="small">Recuerda incluir un título para tu charla.</p>
+                    <input type="submit" value="Enviar" class="btn btn-success btn-block">
+                </form>
+            
+        </div>
+        <!--Navbar de abajo-->
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-sm bg-primary">
+                <div class="container-fluid">
+                    <div class="text-center mx-auto">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
+                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
 </body>
 
 </html>
