Agregado página de compra

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link text-light" href="#">Se un orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="#">Comprar tickets</a>
+                        <a class="nav-link text-success" href="compraticket.html">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
